# Fuck-Rust

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.en.md  README.md  agent.md  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci-cd.yml
.trae/documents/: rust-learning-prd.md  rust-learning-technical-architecture.md
apps/web/: Cargo.toml  Trunk.toml  index.html  styles.css
apps/web/src/: app.rs  components.rs  i18n.rs  main.rs  monaco_playground.js  pages.rs  storage.rs
crates/learning_core/: Cargo.toml
crates/learning_core/src/: curriculum.rs  exercises.rs  lib.rs  progress.rs
e2e/: pages.spec.ts
scripts/: deploy-cloudflare.sh  ship.sh  sync-github-secrets.sh
