[workspace]
members = [
    "apps/web",
    "crates/learning_core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/bytedance/Fuck-Rust"

[workspace.dependencies]
learning_core = { path = "crates/learning_core" }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
