[package]
name = "rust_learning_web"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
gloo-net = { version = "0.6", features = ["http"] }
gloo-storage = "0.3"
js-sys = "0.3"
learning_core.workspace = true
serde.workspace = true
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlInputElement", "HtmlTextAreaElement", "KeyboardEvent", "Window"] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
